05/demos/m5/demo2/grafana/03-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - prometheus.local
  - prometheus-istio-gateway.apps-crc.testing
  gateways:
  - istio-gateway/gateway
  exportTo:
  - istio-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - grafana.local
  - grafana-istio-gateway.apps-crc.testing
  gateways:
  - istio-gateway/gateway
  exportTo:
  - istio-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
